--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=VT323&s&family=Unlockdisplay=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Sacramento&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .card {
-    @apply bg-white rounded-sm shadow-md mb-4;
+    @apply bg-white rounded-sm shadow-md mb-4 hover:shadow-lg;
+}
+
+.navelem {
+    @apply 
 }
