added app.js for incldue some functionality

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -13,17 +13,17 @@
     <div class="md:grid grid-cols-6">
         <div class="md:col-span-1">
             <nav class="text-right">
-                <div>
+                <div class="flex justify-between items-center">
                     <h1 class="font-mono font-semibold text-3xl border-b text-left ml-2">
                         <a href="/">Code Your Career</a>
                     </h1>
-                    <div class="px-4 cursor-pointer md:hidden">
-                        <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <div class="px-4 cursor-pointer md:hidden" id="icon">
+                        <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                           </svg>                          
                     </div>
                 </div>
-                <ul class="text-base m-4 mt-10 ">
+                <ul class="m-4 mt-10 hidden md:block" id="menu">
                     <li class="px-6">
                         <a href="">
                             <span class="text-gray-500 hover:text-gray-800">1. Home</span>
@@ -64,5 +64,6 @@
     </div>
     </main>
 </div>
+<script src="/src/app.js"></script>
 </body>
 </html>
