small text  navbar

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -26,24 +26,24 @@
                 <ul class="m-4 mt-10 hidden md:block" id="menu">
                     <li class="px-6">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800">1. Home</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm">1. Home</span>
                         </a>
                     </li> 
                     <li class="px-6 mt-2">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800">2. About</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm">2. About</span>
                         </a>
                     </li>
                     <li class="px-6 mt-2">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800">3. Contact</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm">3. Contact</span>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
  <!-- end nav -->
-    <main class="bg-gray-200 py-16 px-16 md:col-span-5 sm\:px-2">
+    <main class="bg-gray-200 py-16 px-16 md:col-span-5 sm:px-2">
         <header>
             <h1 class=" mb-12 text-3xl font-bold">
                 Articles
