--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -43,15 +43,15 @@
             </nav>
         </div>
  <!-- end nav -->
-    <main class="bg-gray-200 py-16 px-16 md:col-span-5 sm:px-2">
+    <main class="bg-gray-200 py-16 px-16 md:col-span-4 sm:px-2">
         <header>
-            <h1 class=" mb-12 text-3xl font-bold">
+            <h1 class=" mb-12 text-4xl font-bold mx-14">
                 Articles
             </h1>
         </header>
-        <div class="grid lg:grid-cols-3 md:grid-cols-2 md:gap-10">
+        <div class="grid lg:grid-cols-3 md:grid-cols-2 md:gap-10 mx-14">
     <% articles.forEach(article =>  { %>
-        <div class="card sm\:w-32 hover\:shadow-lg">
+        <div class="card hover\:shadow-lg">
             <img class="w-full h-48 sm\:h-44 object-cover"/>
             <div>
                 <h4 class="text-gray-600 text-2xl font-serif font-bold m-4"><%= article.title %></h4>
