--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Sacramento&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +7,6 @@
     @apply bg-white rounded-sm shadow-md mb-4 hover:shadow-lg;
 }
 
-.navelem {
-    @apply 
+.lift {
+    @apply transform translate-y-3;
 }
