custom fonts working

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -14,8 +14,8 @@
         <div class="md:col-span-1">
             <nav class="text-right">
                 <div class="flex justify-between items-center">
-                    <h1 class="font-mono font-semibold text-3xl border-b text-left ml-2">
-                        <a href="/">Code Your Career</a>
+                    <h1 class="font-semibold text-3xl border-b text-left ml-2">
+                        <a class="font-Special" href="/">Code Your Career</a>
                     </h1>
                     <div class="px-4 cursor-pointer md:hidden" id="icon">
                         <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -26,17 +26,17 @@
                 <ul class="m-4 mt-10 hidden md:block" id="menu">
                     <li class="px-6">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm">1. Home</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">1. Home</span>
                         </a>
                     </li> 
                     <li class="px-6 mt-2">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm">2. About</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">2. About</span>
                         </a>
                     </li>
                     <li class="px-6 mt-2">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm">3. Contact</span>
+                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">3. Contact</span>
                         </a>
                     </li>
                 </ul>
@@ -45,17 +45,17 @@
  <!-- end nav -->
     <main class="bg-gray-200 py-16 px-16 md:col-span-4 sm:px-2">
         <header>
-            <h1 class=" mb-12 text-4xl font-bold mx-14">
+            <h1 class=" mb-12 text-4xl font-bold mx-14 font-Merri">
                 Articles
             </h1>
         </header>
         <div class="grid lg:grid-cols-3 md:grid-cols-2 md:gap-10 mx-14">
     <% articles.forEach(article =>  { %>
-        <div class="card hover\:shadow-lg">
+        <div class="card">
             <img class="w-full h-48 sm\:h-44 object-cover"/>
             <div>
-                <h4 class="text-gray-600 text-2xl font-serif font-bold m-4"><%= article.title %></h4>
-                <div class="text-sm m-4">
+                <h4 class="text-gray-600 text-2xl font-serif font-bold m-4 font-Roboto"><%= article.title %></h4>
+                <div class="text-sm m-4 font-Roboto">
                     <%= article.date.toLocaleDateString() %> - <%= article.author %>
                 </div>
             </div>
