--- a/Views/about.ejs
+++ b/Views/about.ejs
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+    <link href="./Views/output.css" rel="stylesheet">
+    <title>Document</title>
 </head>
+<%- include('navbar') %>
 <body>
     
 </body>
+<script src="/src/app.js"></script>
 </html>
+
