--- a/Views/navbar.ejs
+++ b/Views/navbar.ejs
@@ -1,11 +1,11 @@
 <div class="md:grid grid-cols-6">
     <div class="md:col-span-1">
-        <nav class="text-right">
+        <nav class="text-right sticky top-0">
             <div class="flex justify-between items-center">
                 <h1 class="font-semibold text-3xl border-b text-left ml-2">
                     <a class="font-Special" href="/">Code Your Career</a>
                 </h1>
-                <div class="px-4 cursor-pointer md:hidden" id="icon">
+                <div class="px-4 cursor-pointer md:hidden fixed right-0" id="icon">
                     <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                       </svg>                          
@@ -13,8 +13,8 @@
             </div>
             <ul class="m-4 mt-10 hidden md:block" id="menu">
                 <li class="px-6">
-                    <a href="">
-                        <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">1. Home</span>
+                    <a href="/">
+                        <span class="text-gray-500 hover:text-gray-800  text-sm font-Press">1. Home</span>
                     </a>
                 </li> 
                 <li class="px-6 mt-2">
