--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -26,26 +26,26 @@
                 <ul class="m-4 mt-10 hidden md:block" id="menu">
                     <li class="px-6">
                         <a href="/">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">1. Home</span>
+                            <span class="navText">Home</span>
                         </a>
                     </li> 
-                    <li class="px-6 mt-2">
+                    <li class="px-6 mt-2 sm:text-xs">
                         <a href="/about">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">2. About</span>
+                            <span class="navText">About</span>
                         </a>
                     </li>
                     <li class="px-6 mt-2">
                         <a href="">
-                            <span class="text-gray-500 hover:text-gray-800 text-sm font-Press">3. Contact</span>
+                            <span class="navText">Contact</span>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
  <!-- end nav -->
-    <main class="bg-gray-200 py-16 px-16 md:col-span-4 sm:px-2">
+    <main class="bg-slate-200 py-16 px-16 md:col-span-4 sm:px-2">
         <header>
-            <h1 class=" mb-12 text-4xl font-bold mx-14 font-Merri">
+            <h1 class="text-blue-500 mb-12 text-4xl font-bold mx-14 font-Merri">
                 Articles
             </h1>
         </header>
@@ -54,7 +54,7 @@
         <div class="card">
             <img class="w-full h-40 sm\:h-40 object-cover" src='<%= article.img %>'></img>
             <div>
-                <h4 class="text-gray-600 text-2xl font-serif font-bold m-4 font-Roboto"><%= article.title %></h4>
+                <h4 class="text-blue-700 text-2xl font-bold m-4 font-Roboto"><%= article.title %></h4>
                 <div class="text-sm m-4 font-Inter">
                     <%= article.date.toLocaleDateString() %> - <%= article.author %>
                 </div>
