--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,7 @@
 .card {
     @apply bg-white rounded-sm shadow-md mb-4 hover:shadow-xl transform hover:-translate-y-1 ease-in-out duration-300;
 }
+
+.navText {
+    @apply text-gray-500 hover:text-gray-800 lg:text-sm sm:text-xs md:text-xs font-Press font-light;
+}
