--- a/Views/about.ejs
+++ b/Views/about.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
-    <link href="./Views/output.css" rel="stylesheet">
+    <link href="/Views/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <%- include('navbar') %>
