bg color to blog page

--- a/Views/blog.ejs
+++ b/Views/blog.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
     <%- include('navbar')%>
-<div class="py-16 px-16 md:col-span-4 sm:px-2 m-16" id="content"><%- html %></div>
+<div class="bg-slate-200 py-16 px-16 md:col-span-4 sm:px-2 m-16" id="content"><%- html %></div>
 </body>
 <script src="/src/app.js"></script>
 </html>
