--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -8,7 +8,7 @@
     <link href="/Views/output.css" rel="stylesheet">
     <title>Blog</title>
 </head>
-<body class="fade-in">
+<body class="animate-fadein">
     <div id="root"></div> <!-- Navbar start-->
     <div class="md:grid grid-cols-6">
         <div class="md:col-span-1">
@@ -53,9 +53,9 @@
             <% blogPosts.forEach(item => { %>
                 <a href="/blog/<%= item.slug %>">
                 <div class="card" data-slug="<%= item.slug %>" id="card">
-                  <img class="w-full h-40 sm:h-40 object-cover" src="<%= item.thumbnail %>"></img>
+                    <h4 class="text-blue-500 text-xl font-semibold py-2 font-Roboto"><%= item.title %></h4>
+                  <img class="rounded-md w-full h-44 sm:h-40 px-2 py-4 object-cover" src="<%= item.thumbnail %>" alt="blog img"></img>
                   <div>
-                    <h4 class="text-blue-500 text-xl font-semibold m-4 font-Roboto"><%= item.title %></h4>
                     <h4 class="text-sm px-4 font-Inter pb-4"><%= item.date %> - <%= item.author %></h4>
                   </div>
                 </div>
