--- a/Views/output.css
+++ b/Views/output.css
@@ -539,6 +539,10 @@ video {
   top: 0px;
 }
 
+.m-16{
+  margin: 4rem;
+}
+
 .m-4{
   margin: 1rem;
 }
@@ -576,8 +580,8 @@ video {
   display: none;
 }
 
-.h-40{
-  height: 10rem;
+.h-44{
+  height: 11rem;
 }
 
 .h-6{
@@ -596,6 +600,22 @@ video {
   width: 100%;
 }
 
+@keyframes fade{
+  0%{
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  100%{
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.animate-fadein{
+  animation: fade 1s ease-in-out forwards;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -610,6 +630,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .border-b{
@@ -631,6 +655,11 @@ video {
   padding-right: 4rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -644,6 +673,20 @@ video {
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .text-left{
@@ -662,21 +705,12 @@ video {
   font-family: Merriweather;
 }
 
-.font-Press{
-  font-family: "Press Start 2P";
-}
-
 .font-Roboto{
   font-family: Roboto;
 }
 
 .font-Special{
   font-family: "Special Elite";
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl{
@@ -694,6 +728,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -702,19 +741,9 @@ video {
   font-weight: 600;
 }
 
-.text-gray-500{
+.text-blue-500{
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-sky-400{
-  --tw-text-opacity: 1;
-  color: rgb(56 189 248 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .card{
@@ -771,12 +800,11 @@ video {
   }
 }
 
-.hover\:text-gray-800:hover{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
 @media (min-width: 640px){
+  .sm\:h-40{
+    height: 10rem;
+  }
+
   .sm\:px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
