--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -8,7 +8,7 @@
     <link href="/Views/output.css" rel="stylesheet">
     <title>Blog</title>
 </head>
-<body class="animate-fadein">
+<body class="">
     <div id="root"></div> <!-- Navbar start-->
     <div class="md:grid grid-cols-6">
         <div class="md:col-span-1">
@@ -52,7 +52,7 @@
         <div class="grid lg:grid-cols-3 md:grid-cols-2 md:gap-10 mx-14">
             <% blogPosts.forEach(item => { %>
                 <a href="/blog/<%= item.slug %>">
-                <div class="card" data-slug="<%= item.slug %>" id="card">
+                <div class="card animate-fadein" data-slug="<%= item.slug %>" id="card">
                     <h4 class="text-blue-500 text-xl font-semibold py-2 font-Roboto"><%= item.title %></h4>
                   <img class="rounded-md w-full h-44 sm:h-40 px-2 py-4 object-cover" src="<%= item.thumbnail %>" alt="blog img"></img>
                   <div>
