some animations added

--- a/Views/navbar.ejs
+++ b/Views/navbar.ejs
@@ -11,7 +11,7 @@
         <nav class="text-right sticky top-0">
             <div class="flex justify-between items-center">
                 <h1 class="font-semibold text-3xl border-b text-left ml-2">
-                    <a class="font-Special" href="/">Code Your Career</a>
+                    <a class="font-Special" href="/">Coded Career</a>
                 </h1>
                 <div class="px-4 cursor-pointer md:hidden fixed right-0" id="icon">
                     <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
