--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,13 @@
 @tailwind utilities;
 
 .card {
-    @apply bg-white rounded-sm shadow-md mb-4 hover:shadow-xl transform hover:-translate-y-1 ease-in-out duration-300;
+    @apply bg-white rounded-sm shadow-md mb-4;
 }
 
 .navText {
     @apply text-gray-500 hover:text-gray-800 lg:text-sm sm:text-xs md:text-xs font-Press font-light;
+}
+
+.social {
+    @apply w-8 h-8  inset-x-0 bottom-0 transform transition duration-500 hover:-translate-y-1 fill-current hover:text-blue-500;
 }
