--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,9 @@
 }
 
 .social {
-    @apply w-8 h-8  inset-x-0 bottom-0 transform transition duration-500 hover:-translate-y-1 fill-current hover:text-blue-500;
+    @apply w-8 h-8 inset-x-0 transform transition duration-500 hover:-translate-y-1 fill-current hover:text-blue-500;
+}
+
+.hide {
+    @apply space-y-6 hidden md:block;
 }
