--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
     <link href="/Views/output.css" rel="stylesheet">
-    <title>404 Error</title>
+    <title>404 Page Not Found</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Sorry this page was not found</h1>
+    </div>
 </body>
 </html>
