--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
     <link href="/Views/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/path/to/fontawesome/css/all.min.css">
     <title>Blog</title>
 </head>
 <body class="min-h-screen">
@@ -100,6 +99,6 @@
         </div>
     </footer>
 </div>
-<script src="/src/app.js"></script>
+<script src="src/app.js"></script>
 </body>
 </html>
