--- a/Views/blog.ejs
+++ b/Views/blog.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+    <link href="/Views/output.css" rel="stylesheet">
+    <title>Blog Main</title>
 </head>
 <body>
     <%- include('navbar')%>
