minor accessibility and best practice amendments

--- a/Views/blog.ejs
+++ b/Views/blog.ejs
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
     <link href="/Views/output.css" rel="stylesheet">
     <title>Blog Main</title>
 </head>
 <body>
     <%- include('navbar')%>
-<div class="bg-slate-200 py-16 px-16 md:col-span-4 sm:px-2 m-16 animate-fadein" id="content"><%- html %></div>
+<div class="bg-gray-300 py-16 px-16 md:col-span-4 sm:px-2 m-16 animate-fadein" id="content"><%- html %></div>
 </body>
 <script src="/src/app.js"></script>
 </html>
